--- a/nginx.conf
+++ b/nginx.conf
@@ -43,6 +43,22 @@ http {
 			index  index.html index.htm;
 		}
 
-		
+		location VMESS_WSPATH {
+			proxy_redirect off;
+			proxy_pass http://127.0.0.1:10000;
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection upgrade;
+			proxy_set_header Host $http_host;
+		}
+
+		location VLESS_WSPATH {
+			proxy_redirect off;
+			proxy_pass http://127.0.0.1:20000;
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection upgrade;
+			proxy_set_header Host $http_host;
+		}
 	}
 }
